# v_utils

./: .gitignore  .local.sh  .pre-commit-config.yaml  .treefmt.toml  Cargo.toml  README.md  build.rs  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5m7gz0f40875k7wypbfiapynxl69fhwm-source  8vz84mqgnm1gz5yk7hgnnb5gir5hjxas-source  9zx8n4sm4b4l82cia0higaiyfxi0vr89-source  mln6wr5z539qgldmsm4j1k8k0dm19yvz-source
.github/workflows/: ci.nix  ci.yml  errors.yml  llm_tests.yml  other.yml  warnings.yml
.readme_assets/: description.md  other.md
src/: expanded_path.rs  lib.rs
src/data/: compact_format.rs
src/io/: cli.rs  expanded_path.rs  mod.rs
src/klines/: klines.rs  mod.rs  side.rs  symbol.rs  timeframe.rs  timestamp.rs
src/trades/: klines.rs  side.rs  timeframe.rs
v_utils/: Cargo.toml  build.rs
v_utils/examples/: logging_emit.rs
v_utils/src/: lib.rs  macros.rs  prelude.rs
v_utils/src/api_shorthands/: llm.rs  mod.rs
v_utils/src/arch/: component.rs  keyed.rs  mod.rs
v_utils/src/bevy/: mod.rs  modal.rs  pressed_chars.rs
v_utils/src/data/: compact_format.rs  mod.rs
v_utils/src/distributions/: .reiman_zeta.rs.pending-snap  laplace.rs  mod.rs  normal.rs  reiman_zeta.rs
v_utils/src/distributions/snapshots/: v_utils__distributions__reiman_zeta__tests__reiman_zeta.snap
v_utils/src/internal_utils/: mod.rs  simplified_snapshots.rs
v_utils/src/io/: cli.rs  expanded_path.rs  file_open.rs  files.rs  mod.rs  percent.rs  progress_bar.rs  xdg.rs
v_utils/src/llm/: blocking.rs  claude.rs  mod.rs
v_utils/src/other/: fraction.rs  mod.rs  now_then.rs  percent.rs  pretty.rs  time.rs
v_utils/src/trades/: klines.rs  mod.rs  pair.rs  side.rs  symbol.rs  timeframe.rs  timestamp.rs  usd.rs
v_utils/src/utils/: .snapshots.rs.pending-snap  collections.rs  dirs.rs  eyre.rs  format.rs  info_size.rs  math.rs  mod.rs  serde.rs  snapshots.rs  tracing.rs
v_utils/src/utils/snapshots/: v_utils__utils__snapshots__tests__plot_0.snap  v_utils__utils__snapshots__tests__siaendtiaersnd.snap
v_utils/tests/: ask_claude.rs  main.rs  protocols-spec-from-vec-str.rs  unit_tests_main.rs
v_utils/tests/logging/: file.rs
v_utils/tests/logging/snapshots/: logging_file__clientside_writes_stdout_stderr_and_file.snap
v_utils_macros/: Cargo.toml  README.md  build.rs
v_utils_macros/src/: compact_format.rs  lib.rs
v_utils_macros/tests/: .graphemics.rs.pending-snap  01-graphemics.rs  01-parse.rs  02-derive.rs  compile_fail.rs  default_field_values.rs  derive_settings.rs  diff_from_defaults.rs  example_config.nix  from_vec_str.rs  graphemics.rs  init-compact.rs  init_compact.rs  live_settings.rs  main.rs  make_df.rs  my_config_primitives.rs  private-values.rs  progress.rs  scream_it.rs  settings_config_name.rs  settings_flatten_cross_module.rs  settings_missing_config_warns.rs  settings_module.rs  settings_nested.rs  settings_nix.rs  settings_no_default.rs  settings_schema.rs  settings_schema_optional.rs  test_skip_runtime.rs  test_unknown_field.toml  test_unknown_field_warning.rs  wrap_err.rs  wrap_new.rs
v_utils_macros/tests/compile_fail/: compact_format_duplicate_first_char.rs  compact_format_duplicate_first_char.stderr  compact_format_map_duplicate_first_char.rs  compact_format_map_duplicate_first_char.stderr  optional_fields_non_option.rs  optional_fields_non_option.stderr  own_on_named_variant.rs  own_on_named_variant.stderr  primitives_unknown_field_value.rs  primitives_unknown_field_value.stderr  primitives_unknown_struct_value.rs  primitives_unknown_struct_value.stderr  private_value_with_inline_default.rs  private_value_with_inline_default.stderr  private_value_with_smart_default.rs  private_value_with_smart_default.stderr  scream_it_on_struct.rs  scream_it_on_struct.stderr  settings_unknown_field_value.rs  settings_unknown_field_value.stderr  settings_unknown_skip_target.rs  settings_unknown_skip_target.stderr  settings_unknown_struct_value.rs  settings_unknown_struct_value.stderr  try_parse_variants_multi_field_variant.rs  try_parse_variants_multi_field_variant.stderr  try_parse_variants_on_struct.rs  try_parse_variants_on_struct.stderr  vec_fields_non_vec.rs  vec_fields_non_vec.stderr  wrap_err_on_tuple_struct.rs  wrap_err_on_tuple_struct.stderr  wrap_new_on_named_struct.rs  wrap_new_on_named_struct.stderr
v_utils_macros/tests/compile_fail_cascade/: settings_flatten_missing_nested_derive.rs  settings_flatten_missing_nested_derive.stderr
v_utils_macros/tests/compile_fail_deps/: Cargo.toml
v_utils_macros/tests/compile_fail_deps/src/: lib.rs
v_utils_macros/tests/snapshots/: wrap_err__inner: from inner.snap
