cargo-features = ["codegen-backend"]

[workspace]
members = ["v_utils", "v_utils_*"]
resolver = "1"

[workspace.dependencies]
v_utils = { path = "v_utils" }
v_utils_macros = { path = "v_utils_macros", version = "2.11.48" }

ahash = "0.8.12"
async-sse = "5.1.0"
bevy = { version = "0.18.1", default-features = false }
bon = { version = "^3.9.1" }
bytes = "1.11.1"
clap = "4.6.1"
color-eyre = "0.6"
config = "0.15.22"
console-subscriber = "0.5.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
const_format = "0.2.36"
derive-new = "0.7.0"
derive_more = "2.1.1"
dirs = "6.0.0"
eyre = { version = "^0.6.12" } # not color-eyre, that one is for client-side
facet = { version = "^0.46" }
facet-json = "0.46"
facet-toml = "0.46"
function_name = "0.3.0"
futures = "0.3.32"
heck = { version = "^0.5.0" }
indexmap = "2.14.0"
insta = { version = "^1.47.2", features = ["filters"] }
jiff = "0.2.23"
libc = "0.2"
macro-attr = "0.2.0"
miette = "7.6"
polars = { version = "0.53.0", default-features = false }
proc-macro2 = "1.0.106"
quote = { version = "^1.0.45" }
rand = "0.10.1"
rand_distr = "0.6.0"
reqwest = { version = "0.13.2", default-features = false }
secrecy = "0.10.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.149" }
strum = "0.28.0"
syn = "2.0.117"
tempfile = "3"
thiserror = "2.0.18"
tokio = "1.52.1"
toml = { version = "^1.1" }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
ui_test = "0.30"
ustr = "1.1"
xdg = "3.0.0"
