[package]
name = "v_utils"
version = "2.15.31"
edition = "2024"
description = "My utils crate"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/v_utils"
#

[features]
default = ["lite"]

io = ["dep:dirs", "dep:libc"] 
xdg = [
    "dep:xdg",
    "v_utils_macros/xdg",
] # have to separate it, because `xdg` lib behaves weirdly under wasm
cli = [
    "io",
    # Required for confirm_blocking in Settings macro
    "v_utils_macros/cli",
    "dep:config",
    "dep:facet",
    "dep:facet-json",
    "dep:facet-toml",
    "dep:toml",
]
async-io = ["dep:tokio", "tokio/io-std", "tokio/process", "tokio/rt-multi-thread"]
assert-wasm-compat = []
trades = ["dep:jiff", "dep:strum"]
macros = ["v_utils_macros"]
tracing = [
    "dep:xdg",
    "dep:tracing-subscriber",
    "dep:tracing-log",
    "dep:tracing-error",
    "dep:miette",
    "dep:xdg",
]
distributions = ["dep:rand", "dep:rand_distr"]
wasm = ["dep:console_error_panic_hook", "dep:console_log"]

lite = ["io", "macros", "trades", "tracing", "dep:futures", "dep:tokio"]
full = [
    "lite",
    "distributions",
    "xdg",
    "cli",
    "dep:tokio",
    "tokio/full",
    "dep:console-subscriber",
] #console-subscriber also is pulling tokio with `mio`, breaking wasm builds

[dependencies]
v_utils_macros = { path = "../v_utils_macros", version = "^2.11.31", optional = true }

async-sse = { version = "^5.1.0", optional = true }
bytes = { version = "^1.11.1", optional = true }
config = { version = "^0.15.19", optional = true }
console-subscriber = { version = "0.5.0", optional = true }
console_error_panic_hook = { version = "^0.1.7", optional = true }
console_log = { version = "^1.0.0", optional = true }
const_format = "0.2.35"
derive-new = "^0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
dirs = { version = "^6.0.0", optional = true }
facet-json = { version = "^0.44", optional = true }
facet-toml = { version = "^0.44", optional = true }
function_name = "^0.3.0" # weird to include this without a feature flag, but this is a utils crate in the end
futures = { version = "^0.3.32", optional = true }
jiff = { version = "^0.2.23", features = ["serde"], optional = true }
libc = { version = "^0.2", optional = true }
macro-attr = { version = "0.2.0", features = ["unstable-macros-1-1"] }
miette = { version = "^7.6", optional = true }
rand = { version = "^0.10.0", optional = true }
rand_distr = { version = "^0.6.0", optional = true }
reqwest = { version = "^0.13.2", default-features = false, features = ["json", "blocking", "stream", "rustls"], optional = true }
strum = { version = "^0.28.0", features = ["derive"], optional = true }
thiserror = "2.0.18"
tokio = { version = "^1.50.0", features = ["sync", "macros", "io-util", "rt", "time"], optional = true } # by default only enable features that play with wasm.
tracing = { version = "^0.1.44", features = ["log", "std", "async-await"] }
tracing-error = { version = "^0.2.1", optional = true }
tracing-log = { version = "^0.2.0", optional = true }
tracing-subscriber = { version = "^0.3.22", features = ["fmt", "json", "registry", "env-filter"], optional = true }
xdg = { version = "^3.0.0", optional = true }

bon.workspace = true
eyre.workspace = true
facet = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, optional = true }

[dev-dependencies]
v_utils_macros = { path = "../v_utils_macros" }

insta.workspace = true
trybuild.workspace = true
