[package]
name = "v_utils"
version = "2.15.47"
edition = "2024"
description = "My utils crate"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/v_utils"
#

[features]
default = ["lite"]

io = ["dep:dirs", "dep:libc"]
xdg = ["dep:xdg", "v_utils_macros/xdg"]
cli = [
    "io",
    # Required for confirm_blocking in Settings macro
    "v_utils_macros/cli",
    "dep:config",
    "dep:facet",
    "dep:facet-json",
    "dep:facet-toml",
    "dep:toml",
]
async-io = ["dep:tokio", "tokio/io-std", "tokio/process", "tokio/rt-multi-thread"]
assert-wasm-compat = []
trades = ["dep:jiff", "dep:strum"]
macros = ["v_utils_macros"]
tracing = [
    "dep:xdg",
    "dep:tracing-subscriber",
    "dep:tracing-log",
    "dep:tracing-error",
    "dep:miette",
    "dep:xdg",
]
bevy = ["dep:bevy"]
distributions = ["dep:rand", "dep:rand_distr"]
wasm = ["dep:console_error_panic_hook", "dep:console_log"]

lite = ["io", "macros", "trades", "tracing", "dep:futures", "dep:tokio"]
full = [
    "lite",
    "distributions",
    "xdg",
    "cli",
    "dep:tokio",
    "tokio/full",
    "dep:console-subscriber",
]

[dependencies]
ahash.workspace = true
async-sse = { workspace = true, optional = true }
bevy = { workspace = true, features = ["bevy_state", "bevy_ui"], optional = true }
bon.workspace = true
bytes = { workspace = true, optional = true }
config = { workspace = true, optional = true }
console-subscriber = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
const_format.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["full"] }
dirs = { workspace = true, optional = true }
eyre.workspace = true
facet = { workspace = true, optional = true }
facet-json = { workspace = true, optional = true }
facet-toml = { workspace = true, optional = true }
function_name.workspace = true # weird to include this without a feature flag, but this is a utils crate in the end
futures = { workspace = true, optional = true }
indexmap.workspace = true
insta.workspace = true
jiff = { workspace = true, features = ["serde"], optional = true }
libc = { workspace = true, optional = true }
macro-attr = { workspace = true, features = ["unstable-macros-1-1"] }
miette = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "blocking", "stream", "rustls"], optional = true }
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"], optional = true } # by default only enable features that play with wasm.
toml = { workspace = true, optional = true }
tracing = { workspace = true, features = ["log", "std", "async-await"] }
tracing-error = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "registry", "env-filter"], optional = true }
ustr.workspace = true
v_utils_macros = { workspace = true, optional = true }
xdg = { workspace = true, optional = true }

[dev-dependencies]
color-eyre.workspace = true
miette = { workspace = true, features = ["fancy"] }
tempfile.workspace = true

[[example]]
name = "logging_emit"
required-features = ["tracing", "xdg"]

[[test]]
name = "logging_file"
path = "tests/logging/file.rs"
required-features = ["tracing", "xdg"]
