[package]
name = "v_utils_macros"
version = "2.11.31"
edition = "2021"
description = "Macros for my utils crate"
rust-version = "1.75"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Valera6/v_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
default = ["cli"]
cli = []
xdg = []

full = ["cli", "xdg"]

[dependencies]
proc-macro2 = { version = "^1.0.105", features = ["span-locations"] }
syn = { version = "^2.0.114", features = ["full", "extra-traits"] }

eyre.workspace = true
heck.workspace = true
quote.workspace = true
serde.workspace = true

[dev-dependencies]
v_utils = { path = "../v_utils", features = ["full"] }

clap = { version = "^4.5.54", features = ["derive"] }
polars = { version = "0.52.0", default-features = false, features = ["fmt"] } # pains me to add this entire dep for one test. Maybe I'll figure out a way to get rid of this at some point.
secrecy = "^0.10.3"

insta.workspace = true
serde_json.workspace = true
toml.workspace = true
trybuild.workspace = true

[[test]]
name = "tests"
path = "tests/main.rs"

[[test]]
name = "test_unknown_field_warning"
path = "tests/test_unknown_field_warning.rs"
