[package]
name = "v_utils_macros"
version = "2.11.38"
edition = "2021"
description = "Macros for my utils crate"
rust-version = "1.75"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Valera6/v_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
default = ["cli"]
cli = []
xdg = []

full = ["cli", "xdg"]

[dependencies]
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn = { workspace = true, features = ["full", "extra-traits"] }

eyre.workspace = true
heck.workspace = true
quote.workspace = true
serde.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
insta.workspace = true
polars = { workspace = true, features = ["fmt"] } # pains me to add this entire dep for one test. Maybe I'll figure out a way to get rid of this at some point.
secrecy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-error.workspace = true
trybuild.workspace = true
v_utils = { workspace = true, features = ["full"] }

[[test]]
name = "tests"
path = "tests/main.rs"

[[test]]
name = "test_unknown_field_warning"
path = "tests/test_unknown_field_warning.rs"
