[package]
name = "v_utils_macros"
version = "2.11.44"
edition = "2021"
description = "Macros for my utils crate"
rust-version = "1.75"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Valera6/v_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
default = ["cli"]
cli = []
xdg = []

full = ["cli", "xdg"]

[dependencies]
eyre.workspace = true
heck.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
serde.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
insta.workspace = true
polars = { workspace = true, features = ["fmt"] } # pains me to add this entire dep for one test. Maybe I'll figure out a way to get rid of this at some point.
secrecy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-error.workspace = true
ui_test.workspace = true
v_utils = { workspace = true, features = ["full"] }

[[test]]
name = "graphemics"
path = "tests/graphemics.rs"

[[test]]
name = "from_vec_str"
path = "tests/from_vec_str.rs"

[[test]]
name = "init_compact"
path = "tests/init_compact.rs"

[[test]]
name = "my_config_primitives"
path = "tests/my_config_primitives.rs"

[[test]]
name = "make_df"
path = "tests/make_df.rs"

[[test]]
name = "wrap_new"
path = "tests/wrap_new.rs"

[[test]]
name = "wrap_err"
path = "tests/wrap_err.rs"

[[test]]
name = "scream_it"
path = "tests/scream_it.rs"

[[test]]
name = "derive_settings"
path = "tests/derive_settings.rs"
required-features = ["cli"]

[[test]]
name = "live_settings"
path = "tests/live_settings.rs"
required-features = ["cli"]

[[test]]
name = "settings_no_default"
path = "tests/settings_no_default.rs"
required-features = ["cli"]

[[test]]
name = "diff_from_defaults"
path = "tests/diff_from_defaults.rs"
required-features = ["cli"]

[[test]]
name = "test_unknown_field_warning"
path = "tests/test_unknown_field_warning.rs"
required-features = ["cli"]

[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"
harness = false
